<resources>
    <string name="app_name">Sevmoquegua</string>
    <string name="sp">SP</string>
    <string name="pi">P I</string>
    <string name="i">I</string>
    <string name="r">R</string>
    <string name="sev">Nº S.E.V</string>
    <string name="agregar">Agregar</string>
    <string name="cancelar">Cancelar</string>
    <string name="borrar1">Borrar 1</string>
    <string name="graficar">Graficar</string>
</resources>